2007-01-21  Robert Ancell  <bob27@users.sourceforge.net>
	* Fix error in testing for check - copy board before checking to avoid
	  iterating across list that is changing (sf.net bug #106348)

2007-01-20  Robert Ancell  <bob27@users.sourceforge.net>
	* Fix exception when a save error occurs (Bug #389960)
	* Tidied up error dialogs and PGN error messages

2007-01-05  Andreas Røsdal  <andreasr@gnome.org>

	* data/glchess.schemas.in: Default window size changed so that
	the chess board fills most of the window widget as a square.

2007-01-07  Kjartan Maraas  <kmaraas@gnome.org>

	* glchess.desktop.in: Add missing bugzilla stuff.

2007-01-05  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gtkui/dialogs.py: Mark forgotten string for translation.

2007-01-01  Robert Ancell  <bob27@users.sourceforge.net>
	* Fix castling bug

2006-12-31  Robert Ancell  <bob27@users.sourceforge.net>
	* Rephrased AI information dialog again...
	* Added GConf schemas
	* Use domain specified in defaults.py when loading Glade files
	* Remember load and save game directories
        * Removed load game properties (to make code simpler)
        * Remember new game dialog properties
	* Tell window manager to mark the window when a human player is able to move

2006-12-30  Robert Ancell  <bob27@users.sourceforge.net>
	* Set main window title to 'Chess - game name'

2006-12-29  Andreas Røsdal  <andreasr@gnome.org>

	* glade/glchess.glade: Rephrase error message when no AIs are active,
	reported in Ubuntu Bug #77016.

2006-12-27  Andreas Røsdal  <andreasr@gnome.org>

	* help/C/glchess.xml: Add missing XML elements to the documentation,
	which prevented 'make install' from completing (Closing Bug #369550).

2006-12-26  Danilo Šegan  <danilo@gnome.org>

	* help/Makefile.am: Switch to gnome-doc-utils.
	* help/C/glchess.xml: Correct DocBook stuff.
	* help/C/Makefile.am, help/C/glchess-C.omf: Removed.
	* help/glchess.omf.in: Added.

2006-12-26  paul  <ephraim_owns@hotmail.com>