@@ -3,13 +3,23 @@
 import os, os.path
 import gettext
 
+APP_DATA_DIR    = os.path.join('@prefix@', 'share') 
+ICON_DIR        = os.path.join(APP_DATA_DIR, 'pixmaps')
+TEXTURE_DIR     = os.path.join(ICON_DIR, 'glchess')
+GLADE_DIR       = os.path.join(APP_DATA_DIR, 'glchess')
+BASE_DIR        = os.path.join(APP_DATA_DIR, 'glchess')
+LOCALEDIR 	= os.path.join(APP_DATA_DIR, 'locale')
+DATA_DIR        = os.path.expanduser('~/.gnome2/glchess/')
+CONFIG_FILE     = os.path.join(DATA_DIR, 'config.xml')
+LOCAL_AI_CONFIG = os.path.join(DATA_DIR, 'ai.xml')
+
 DOMAIN = 'gnome-games'
-gettext.bindtextdomain(DOMAIN)
+gettext.bindtextdomain(DOMAIN, LOCALEDIR)
 gettext.textdomain(DOMAIN)
 from gettext import gettext as _
 
 import gtk.glade
-gtk.glade.bindtextdomain (DOMAIN)
+gtk.glade.bindtextdomain (DOMAIN, LOCALEDIR)
 gtk.glade.textdomain (DOMAIN)
 
 VERSION = "@VERSION@"
@@ -39,14 +49,5 @@ You should have received a copy of the GNU General Public License along with thi
 2D Models:
 Copyright World Wide Web Consortium, (Massachusetts Institute of Technology, Institut National de Recherche en Informatique et en Automatique, Keio University). All Rights Reserved. http://www.w3.org/Consortium/Legal/"""
 
-APP_DATA_DIR    = os.path.join('@prefix@', 'share') 
-ICON_DIR        = os.path.join(APP_DATA_DIR, 'pixmaps')
-TEXTURE_DIR     = os.path.join(ICON_DIR, 'glchess')
-GLADE_DIR       = os.path.join(APP_DATA_DIR, 'glchess')
-BASE_DIR        = os.path.join(APP_DATA_DIR, 'glchess')
-
-DATA_DIR        = os.path.expanduser('~/.gnome2/glchess/')
-CONFIG_FILE     = os.path.join(DATA_DIR, 'config.xml')
-LOCAL_AI_CONFIG = os.path.join(DATA_DIR, 'ai.xml')
 
 if not os.path.exists(DATA_DIR): os.makedirs(DATA_DIR)
