@@ -1,3 +1,8 @@
+2007-01-27  Andreas Røsdal  <andreasr@gnome.org>
+
+	* src/lib/defaults.py.in: Resolve Bug #393882: strings not translated. 
+	This is done by specifying the locale directory specifically.
+
 2007-01-21  Robert Ancell  <bob27@users.sourceforge.net>
 	* Fix error in testing for check - copy board before checking to avoid
 	  iterating across list that is changing (sf.net bug #106348)
